--- a/css/tablet-adaptation.css
+++ b/css/tablet-adaptation.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 640px) {
     .container {
-        min-width: 620px;
+        /* min-width: 620px; */
     }
     .mobile-element {
         display: none;
